# playlister

./: Cargo.toml  README.md  arch-prepare.sh
arch-pkg/: PKGBUILD
src/: main.rs
