[package]
name = "playlister"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
overflow-checks = true
lto = "thin"

[dependencies]
camino = "1.1.6"
clap = { version = "4.5.3", features = ["derive"] }
ffmpeg-next = "7.0.4"
phf = { version = "0.11.2", features = ["macros"] }
